--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -21,6 +22,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
