--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@react-oauth/google": "^0.11.0",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -23,7 +24,9 @@
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
